compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__discard_utf8_pattern.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n    let assert <<_:utf8, rest:bits>> = <<>>\n}"
---
----- SOURCE CODE

pub fn main() {
    let assert <<_:utf8, rest:bits>> = <<>>
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    _assert_subject = <<>>,
case _assert_subject of
    <<_/utf8, Rest/bitstring>> -> _assert_subject;
    _assert_fail ->
        erlang:error(#{gleam_error => let_assert,
                    message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"main"/utf8>>,
                    line => 3,
                    value => _assert_fail,
                    start => 21,
                    'end' => 60,
                    pattern_start => 32,
                    pattern_end => 53})
end.
